--- a/build.gradle
+++ b/build.gradle
@@ -26,16 +26,16 @@ List alibaba = [
         'com.alibaba:fastjson:1.2.78'
 ]
 List apache = [
-        'org.apache.httpcomponents:httpclient:latest.release'
+        'org.apache.httpcomponents:httpclient:4.5.13'
 ]
 List logback = [
-        'ch.qos.logback:logback-classic:latest.release'
+        'ch.qos.logback:logback-classic:1.2.11'
 ]
 List junit = [
-        'org.junit.jupiter:junit-jupiter-engine:latest.release'
+        'org.junit.jupiter:junit-jupiter-engine:5.9.0'
 ]
 List yaml = [
-        'org.yaml:snakeyaml:latest.release'
+        'org.yaml:snakeyaml:1.31'
 ]
 dependencies {
     implementation logback,alibaba,apache,yaml
